# openfang-chaitex

./: CHAITEX.md  CHANGELOG.md  Cargo.toml  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-self-learning-core/: 01-01-SUMMARY.md  01-01-rusqlite-fts5-flag-and-flattener-PLAN.md  01-02-SUMMARY.md  01-02-schema-v9-migration-backfill-PLAN.md  01-03-SUMMARY.md  01-03-sessionstore-dual-write-PLAN.md  01-04-SUMMARY.md  01-04-session-search-tool-PLAN.md  01-05-SUMMARY.md  01-05-skillregistry-mutation-methods-PLAN.md  01-06-SUMMARY.md  01-06-skill-manifest-flags-PLAN.md  01-07-SUMMARY.md  01-07-protected-mutable-defaults-PLAN.md  01-08-SUMMARY.md  01-08-skill-manage-tool-PLAN.md  01-09-SUMMARY.md  01-09-snapshot-refresh-signal-PLAN.md  01-10-SUMMARY.md  01-10-reasoning-crate-scaffold-PLAN.md  01-11-SUMMARY.md  01-11-reasoning-engine-levels-PLAN.md  01-12-SUMMARY.md  01-12-budget-tracker-config-PLAN.md  01-13-SUMMARY.md  01-13-memory-reason-tool-PLAN.md  01-14-SUMMARY.md  01-15-SUMMARY.md  (+7 more)
crates/openfang-api/: Cargo.toml
crates/openfang-desktop/: tauri.conf.json
crates/openfang-kernel/: Cargo.toml
crates/openfang-reasoning/: Cargo.toml
crates/openfang-reasoning/src/: budget.rs  engine.rs  error.rs  fact_retrieval.rs  kernel_llm.rs  lib.rs  profile.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-types/: Cargo.toml
docs/chaitex/: hermes-on-pc162-rust-port.md  openfang-vs-hermes-analysis.md  phase1-addendum-codebase-grounding.md  phase1-self-learning-architecture.md
scripts/: build-platforms.sh
(+49 files in other folders)
