[package]
name = "openfang-reasoning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Memory reasoning subsystem for the OpenFang Agent OS"

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-memory = { path = "../openfang-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
