[package]
name = "openfang-reasoning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Memory reasoning subsystem for the OpenFang Agent OS"

[dependencies]
openfang-types = { path = "../openfang-types" }
openfang-memory = { path = "../openfang-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
# rusqlite: BudgetTracker speaks SQL against the shared MemorySubstrate
# connection (the `reasoning_budget` table created in v9, plan 01-12). Same
# feature set as the rest of the workspace so the bundled SQLite is used.
rusqlite = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
